--- a/FlipBook3D.html
+++ b/FlipBook3D.html
@@ -11,6 +11,7 @@
 	    }*/
 	  </style>
     <script type="text/javascript" src="js/lib/three.r46.js"></script>
+    <script src="js/lib/Three.FirstPersonControls.js"></script>
     <script type="text/javascript" src="js/lib/MOD3.js"></script>
     <script type="text/javascript" src="js/lib/Tween.js"></script>
     <script type="text/javascript" src="js/FlipBook3D.js"></script>
@@ -22,7 +23,7 @@
 		  <br />
 		  <input type="button" id="flipright" value="flipRight" />
 		</div>
-		<div id="container" style="position:relative;margin:0 auto;padding:0;z-index:0;cursor:pointer;"></div>
+		<!--div id="container" style="position:relative;margin:0 auto;padding:0;z-index:0;cursor:pointer;"></div-->
 
 		<script>
       if (!window.requestAnimationFrame) {
@@ -41,7 +42,10 @@
 
 
 			var container;
-			var camera, scene, renderer, projector;
+			var camera, scene, renderer, projector, light;
+      var clock, thetaD, deltaX, old_mouseX;
+      var controls;
+      var MOVESPEED = 200, ACTUAL_LOOK_SPEED = 0.1;
 
 			var targetRotationY = 0;
 			var targetRotationOnMouseDownY = 0;
@@ -67,52 +71,104 @@
 			  {f:"images/pg5.jpg", b:"images/bcover.png",hard:1}
       ];
 			var book;
-			var pagew = 300, pageh = pagew * 10 / 7;
+			var pagew = 200, pageh = pagew * 10 / 7;
 			var fl, fr;
       var loaded_models = [];
 
-      /*new THREE.JSONLoader().load('models/table.js', function(geometry) {
+      new THREE.JSONLoader().load('models/table.js', function(geometry) {
         var mesh = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
+        mesh.scale.set(100, 100, 100);
         loaded_models.push(mesh);
 			  init();
 			  animate();
-      });*/
-      init();
-      animate();
+      });
+
+      //init();
+      //animate();
+
+      function makeGrid() {
+        var size = 500, step = 25;
+        var geometry = new THREE.Geometry();
+        var  material = new THREE.LineBasicMaterial( { vertexColors: THREE.VertexColors } );
+        var color1 = new THREE.Color( 0x444444 ), color2 = new THREE.Color( 0x888888 );
+
+        for ( var i = - size; i <= size; i += step ) {
+          geometry.vertices.push( new THREE.Vector3( -size, 0, i ) );
+          geometry.vertices.push( new THREE.Vector3( size, 0, i ) );
+
+          geometry.vertices.push( new THREE.Vector3( i, 0, -size ) );
+          geometry.vertices.push( new THREE.Vector3( i, 0, size ) );
+
+          var color = i === 0 ? color1 : color2;
+
+          geometry.colors.push( color, color, color, color );
+
+        }
+        var grid = new THREE.Line( geometry, material, THREE.LinePieces );
+        scene.add( grid );
+      }
+
+      function makeWalls() {
+        //for(var i = 0; i < 4; i++) { //four walls
+          var wall = new THREE.Mesh(
+            new THREE.CubeGeometry(2000, 600, 10),
+            new THREE.MeshBasicMaterial({color: '0x00ff00'})
+          );
+          scene.add(wall);
+          wall.position.set(0, 345, -500);
+        //}
+      }
 
 			function init() {
 
-				container = document.getElementById('container');
+				//container = document.getElementById('container');
 				w = window.innerWidth;
 				h = window.innerHeight;
 				w2 = w / 2;
 				h2 = h / 2;
-				container.style.width = w + "px";
+				/*container.style.width = w + "px";
 				container.style.height = h + "px";
-				container.style.marginTop = 0.5 * (window.innerHeight-h) + 'px';
+				container.style.marginTop = 0.5 * (window.innerHeight-h) + 'px';*/
+
+        clock = new THREE.Clock();
+        deltaX = 0;
+        thetaD = 0;
+        old_mouseX = 0;
 
 				scene = new THREE.Scene();
 
-				camera = new THREE.PerspectiveCamera(50, w/h, 1, 1000);
-				camera.position.z = rad;
+				camera = new THREE.PerspectiveCamera(50, w/h, 0.1, 1500);
+        camera.position.set(30, 365, 1000);
+				//camera.position.z = 100;
 				scene.add(camera);
 				projector = new THREE.Projector();
+
+        controls = new THREE.FirstPersonControls(camera);
+        controls.movementSpeed = MOVESPEED;
+
+        light = new THREE.AmbientLight(0x404040);
+        scene.add(light);
 
         renderer = new THREE.WebGLRenderer({antialias: true});
 				renderer.setSize(w, h);
 
-				container.appendChild(renderer.domElement);
+				//container.appendChild(renderer.domElement);
+        document.body.appendChild(renderer.domElement);
 
-				container.addEventListener('mousedown', onDocumentMouseDown, false);
+				//container.addEventListener('mousedown', onDocumentMouseDown, false);
 
-				book=new FlipBook3D.Book();
-				book.pageWidth=pagew;
-				book.pageHeight=pageh;
+        renderer.domElement.addEventListener('mousemove', onMouseMove, false);
+
+				book = new FlipBook3D.Book();
+				book.pageWidth = pagew;
+				book.pageHeight = pageh;
+        book.position.y = 250;
+        book.rotation.set(-1.57, 0, 0);
 				scene.add(book);
 				for(var i=0; i<images.length; i++) {
-						var texturefront = THREE.ImageUtils.loadTexture(images[i].f);
-						var textureback = THREE.ImageUtils.loadTexture(images[i].b);
-						book.addPage(texturefront,textureback,images[i].hard);
+          var texturefront = THREE.ImageUtils.loadTexture(images[i].f);
+          var textureback = THREE.ImageUtils.loadTexture(images[i].b);
+          book.addPage(texturefront, textureback, images[i].hard);
 				}
 
         // add the loaded models to scene
@@ -168,6 +224,22 @@
 				container.removeEventListener('mouseout', onDocumentMouseOut, false);
 			}
 
+      function onMouseMove(event) {
+        deltaX = event.clientX - old_mouseX;
+        old_mouseX = event.clientX;
+      }
+
+      function fixMouseMove() {
+        thetaD -= deltaX * ACTUAL_LOOK_SPEED;
+        var theta = thetaD * Math.PI / 180;
+        var lookpoint = new THREE.Vector3(0, 0, 0);
+        lookpoint.set(Math.sin(theta), 0, Math.cos(theta));
+        lookpoint.addSelf(camera.position);
+        //lookpoint.add(_this.cam.position); //https://github.com/mrdoob/three.js/wiki/Migration :r54->r55
+        camera.lookAt(lookpoint);
+        deltaX = 0;
+      }
+
 			function animate() {
 				requestAnimationFrame(animate);
 				render();
@@ -176,12 +248,14 @@
 			function render() {
 				var multx = 0.5 * Math.PI;
 				var multy = -Math.PI;
-				camera.position.x = rad * Math.sin(targetRotationY * multy) * Math.cos(targetRotationX * multx);
+				/*camera.position.x = rad * Math.sin(targetRotationY * multy) * Math.cos(targetRotationX * multx);
 				camera.position.y = rad * Math.sin(targetRotationX * multx);
 				camera.position.z = rad * Math.cos(targetRotationY * multy) * Math.cos(targetRotationX * multx);
-				camera.lookAt(scene.position);
+				camera.lookAt(scene.position);*/
+        fixMouseMove();
         TWEEN.update();
 				renderer.render(scene, camera);
+        controls.update(clock.getDelta());
 			}
 		</script>
   </body>
