--- a/index.html
+++ b/index.html
@@ -1,55 +1,213 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Book Engine</title>
-    <meta charset="utf-8"/>
-    <style>
-      body {
-        background-color: #aaa;
-      }
-    </style>
-</head>
-<body>
-  <div id="loading">Loading. Please wait...</div>
-  <div id="controls" style="position:absolute;z-index:1000">
-    <input type="button" id="flipleft" value="flipLeft" />
-    <br />
-    <input type="button" id="flipright" value="flipRight" />
-  </div>
-  <script>
-    if (!window.requestAnimationFrame) {
-
-      window.requestAnimationFrame = (function() {
-
-        return window.webkitRequestAnimationFrame ||
-        window.mozRequestAnimationFrame ||
-        window.oRequestAnimationFrame ||
-        window.msRequestAnimationFrame ||
-        function(/* function FrameRequestCallback */ callback, /* DOMElement Element */ element) {
-          window.setTimeout(callback, 1000 / 60);
-        };
-      })();
-    }
-  </script>
-
-  <script>
-    window.BE = window.BE || {};
-    window.onload = function() {
-      BE.init();
-    };
-  </script>
-  <!--script src="js/lib/jquery-1.9.0.js"></script-->
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<title> Book Engine Demo </title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<style>
+	body
+	{
+	 background-color:#121212;
+	}
+	</style>
+  <!--script src="../jquery-1.9.0.js"></script-->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-  <script src="js/lib/Detector.js"></script>
-  <!--script src="js/lib/three.js"></script>
-  <script src="js/lib/physi.js"></script-->
-  <script type="text/javascript" src="js/lib/three.r46.js"></script>
-  <script src="js/lib/Three.FirstPersonControls.js"></script>
-  <!--script src="js/lib/threex.domevent.js"></script>
-  <script src="js/lib/threex.domevent.object3d.js"></script-->
-  <script type="text/javascript" src="js/lib/MOD3.js"></script>
-  <script type="text/javascript" src="js/lib/Tween.js"></script>
-  <script type="text/javascript" src="js/FlipBook3D.js"></script>
-  <script src="js/main.js"></script>
-</body>
-</html>
+	<script type="text/javascript" src="js/lib/three.r46.js"></script>
+	<script type="text/javascript" src="js/lib/MOD3.js"></script>
+	<script type="text/javascript" src="js/lib/Tween.js"></script>
+	<script type="text/javascript" src="js/lib/reqanim.js"></script>
+	<script type="text/javascript" src="js/FlipBook3D.js"></script>
+	</head>
+	<body>
+		<div id="controls" style="position:absolute;z-index:1000">
+		<input type="button" id="flipleft" value="flipLeft" />
+		<br />
+		<input type="button" id="flipright" value="flipRight" />
+		</div>
+		<div id="container" style="position:relative;margin:0 auto;padding:0;z-index:0;cursor:pointer;"></div>
+		<script>
+			var container;
+			var camera, scene, renderer, projector;
+
+			var targetRotationY = 0;
+			var targetRotationOnMouseDownY = 0;
+			var targetRotationX = 0;
+			var targetRotationOnMouseDownX = 0;
+			var rad=700;
+			var mouse={x:0,y:0};
+			var mouseX = 0;
+			var mouseXOnMouseDown = 0;
+			var mouseY = 0;
+			var mouseYOnMouseDown = 0;
+			var mstack,bend;
+			var windowHalfX = window.innerWidth / 2;
+			var windowHalfY = window.innerHeight / 2;
+			var w,h,w2,h2;
+			var images=[{f:"img/catalog_13.jpg",b:"img/mag_page9.jpg", hard:1},
+			{f:"img/catalog_06.jpg",b:"img/catalog_05.jpg",hard:0},
+			{f:"img/catalog_05.jpg", b:"img/catalog_11.jpg" ,hard:0},
+			/*{f:"img/catalog_11.jpg" ,b:"img/catalog_12.jpg", hard:0},
+			{f:"img/catalog_09.jpg", b:"img/catalog_07.jpg", hard:0},
+			{f:"img/catalog_06.jpg", b:"img/catalog_01.jpg", hard:0},*/
+			{f:"img/catalog_04.jpg", b:"img/catalog_08.jpg",hard:1}];
+			var book, test_book;
+			var pagew=300;
+			var pageh=pagew*10/7;
+			var fl,fr;
+
+      var max_allowed_pages = 20;
+      var max_pages;
+      var fetched = 0;
+
+      $.getJSON('books.json', function(books) {
+        console.log(books);
+        test_book = books[0];
+        max_pages = (test_book.pages > max_allowed_pages) ? max_allowed_pages : test_book.pages;
+			  init();
+			  animate();
+      });
+
+
+			function init() {
+
+				container=document.getElementById('container');
+				w=window.innerWidth;
+				h=window.innerHeight;
+				w2=w/2;
+				h2=h/2;
+				container.style.width=w+"px";
+				container.style.height=h+"px";
+				container.style.marginTop=0.5*(window.innerHeight-h)+'px';
+
+				scene = new THREE.Scene();
+
+				camera = new THREE.PerspectiveCamera( 50, w / h, 1, 1000 );
+				camera.position.z = rad;
+				scene.add( camera );
+				projector = new THREE.Projector();
+
+				// webgl renderer gives better rendering without problems
+				renderer = new THREE.WebGLRenderer();
+				renderer.setSize( w, h );
+
+				container.appendChild( renderer.domElement );
+
+				container.addEventListener( 'mousedown', onDocumentMouseDown, false );
+
+				book=new FlipBook3D.Book();
+				book.pageWidth=pagew;
+				book.pageHeight=pageh;
+				scene.add(book);
+
+
+        for(var i=0; i<max_pages; i+=2) {
+          //var texturefront = t.ImageUtils.loadTexture(images[i].f);
+          var texturefront = THREE.ImageUtils.loadTexture(test_book.url + i + '.jpg');
+          var textureback = THREE.ImageUtils.loadTexture(test_book.url + (i+1) + '.jpg');
+          book.addPage(texturefront, textureback, 0);
+          fetched = i;
+        }
+        console.log('fetched', fetched);
+
+				fl=document.getElementById('flipleft');
+				fr=document.getElementById('flipright');
+        fl.addEventListener('click',function(){
+          book.pages[book.pages.length-book.flippedright].flipLeft()
+          prefetch();
+        });
+        fr.addEventListener('click',function(){
+          book.pages[book.flippedleft-1].flipRight()
+          prefetch();
+        });
+			}
+
+      function prefetch() {
+        var pageno = book.flippedleft * 2;
+        console.log('page no ', pageno);
+        if(test_book.pages < max_allowed_pages) {
+          return;
+        }
+        if(pageno <= fetched - 5) {
+          return;
+        }
+        console.log('fetching books..');
+        var load_pages = fetched + 20;
+        if(load_pages > test_book.pages) {
+          return;
+        }
+        for(var i = fetched + 1; i < load_pages; i += 2) {
+          var texturefront = THREE.ImageUtils.loadTexture(test_book.url + i + '.jpg');
+          var textureback = THREE.ImageUtils.loadTexture(test_book.url + (i+1) + '.jpg');
+          book.addPage(texturefront, textureback, 0);
+          fetched = i;
+        }
+      }
+
+			function onDocumentMouseDown( event ) {
+				event.preventDefault();
+				mouseX=(( event.clientX / w ) * 2 - 1);
+				targetRotationY=mouseX;
+				mouseY=(( event.clientY / h ) * 2 - 1);
+				targetRotationX=mouseY;
+				container.addEventListener( 'mousemove', onDocumentMouseMove, false );
+				container.addEventListener( 'mouseup', onDocumentMouseUp, false );
+				container.addEventListener( 'mouseout', onDocumentMouseOut, false );
+			}
+
+			
+			function onDocumentMouseMove( event ) {
+
+				/*mouseX = event.clientX - w2;
+				mouseY = event.clientY - h2;
+
+				targetRotationY = targetRotationOnMouseDownY + ( mouseX - mouseXOnMouseDown ) * 0.02;
+				targetRotationX = targetRotationOnMouseDownX + ( mouseY - mouseYOnMouseDown ) * 0.02;*/
+				//var target=
+				//mouse_path.push(e.seenas.ray);
+				mouseX=(( event.clientX / w ) * 2 - 1);
+				targetRotationY=mouseX;
+				mouseY=(( event.clientY / h ) * 2 - 1);
+				targetRotationX=mouseY;
+			}
+
+			function onDocumentMouseUp( event ) {
+				container.removeEventListener( 'mousemove', onDocumentMouseMove, false );
+				container.removeEventListener( 'mouseup', onDocumentMouseUp, false );
+				container.removeEventListener( 'mouseout', onDocumentMouseOut, false );
+			}
+			
+
+			function onDocumentMouseOut( event ) {
+
+				container.removeEventListener( 'mousemove', onDocumentMouseMove, false );
+				container.removeEventListener( 'mouseup', onDocumentMouseUp, false );
+				container.removeEventListener( 'mouseout', onDocumentMouseOut, false );
+			}
+			//
+
+			function animate() {
+
+				requestAnimationFrame( animate );
+
+				render();
+
+			}
+			
+			function render2()
+			{
+				TWEEN.update();
+				renderer.render( scene, camera );
+			}
+			
+			function render() {
+
+				var multx=0.5*Math.PI;
+				var multy=-Math.PI;
+				camera.position.x = rad * Math.sin( targetRotationY*multy ) * Math.cos( targetRotationX*multx );
+				camera.position.y = rad * Math.sin( targetRotationX*multx );
+				camera.position.z = rad * Math.cos( targetRotationY*multy ) * Math.cos( targetRotationX*multx );
+				camera.lookAt(scene.position);
+				render2();
+			}
+		</script>
+</body></html>
