--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div id="container" style="position:relative;margin:0 auto;padding:0;z-index:0;cursor:pointer;"></div>
 		<script>
 			var container;
-			var camera, scene, renderer, projector;
+			var camera, scene, renderer, projector, clock;
 
 			var targetRotationY = 0;
 			var targetRotationOnMouseDownY = 0;
@@ -59,6 +59,8 @@
       var max_pages;
       var fetched = 0;
 
+      var controls;
+
       $.getJSON('books.json', function(books) {
         console.log(books);
         test_book = books[0];
@@ -79,9 +81,11 @@
 				container.style.height=h+"px";
 				container.style.marginTop=0.5*(window.innerHeight-h)+'px';
 
+        clock = new THREE.Clock();
 				scene = new THREE.Scene();
 
-				camera = new THREE.PerspectiveCamera( 50, w / h, 1, 1000 );
+				camera = new THREE.PerspectiveCamera( 50, w / h, 0.1, 10000 );
+
 				camera.position.z = rad;
 				scene.add( camera );
 				projector = new THREE.Projector();
@@ -152,9 +156,34 @@
 				container.addEventListener( 'mousemove', onDocumentMouseMove, false );
 				container.addEventListener( 'mouseup', onDocumentMouseUp, false );
 				container.addEventListener( 'mouseout', onDocumentMouseOut, false );
+				window.addEventListener( 'keydown', onKeyDown, false );
+				window.addEventListener( 'keyup', onKeyUp, false );
 			}
 
-			
+			function onKeyDown(event) {
+        var key = event.keyCode;
+        var scale = book.centerContainer.scale;
+        if(key == 87 || key == 38) {
+          book.centerContainer.scale.set(scale.x+=0.1, scale.y +=0.1, scale.z += 0.1);
+          //book.centerContainer.translateZ(10);
+        }
+        else if(key == 83 || key == 40) {
+          book.centerContainer.scale.set(scale.x-=0.1, scale.y -=0.1, scale.z -= 0.1);
+          //book.centerContainer.translateZ(-10);
+        }
+        /*else if(key == 65) {
+          //book.centerContainer.position.x += 1;
+          book.centerContainer.translateX(-10);
+        }
+        else if(key == 68) {
+          book.centerContainer.translateX(10);
+        }*/
+        //book.centerContainer.position.z += 1;
+      }
+
+      function onKeyUp(event) {
+      }
+
 			function onDocumentMouseMove( event ) {
 
 				/*mouseX = event.clientX - w2;
@@ -206,6 +235,7 @@
 				camera.position.x = rad * Math.sin( targetRotationY*multy ) * Math.cos( targetRotationX*multx );
 				camera.position.y = rad * Math.sin( targetRotationX*multx );
 				camera.position.z = rad * Math.cos( targetRotationY*multy ) * Math.cos( targetRotationX*multx );
+        //controls.update(clock.getDelta());
 				camera.lookAt(scene.position);
 				render2();
 			}
